optimize repositories